--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.22.0",
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-awesome-spinners": "^1.3.1",
     "react-dom": "^19.0.0",
     "sass": "^1.85.1",
     "zod": "^3.24.2"
