--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-quiz",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,6 +14,8 @@
     "react": "^19.0.0",
     "react-awesome-spinners": "^1.3.1",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-spinners": "^0.15.0",
     "sass": "^1.85.1",
     "zod": "^3.24.2"
   },
